*Empty MediaWiki Message*

--- a/Alexander_Poesjkin.mw
+++ b/Alexander_Poesjkin.mw
@@ -1,21 +1,21 @@
 [[Ofbeeldienge:AleksandrPushkin.jpg|thumb|right|Portret (ip oliekanvas) van Poesjkin deur Vasily Tropinin, 1827]]
-'''Alexander Sergejevitsj Poesjkin''' (in 't Russisch alfabet: Алекса́ндр Серге́евич Пу́шкин, uut te spreken lik "Alieksandr Siergejievietsj Poesjkien" {{Audio|ru-Pushkin.ogg|beluuster}}), geboorn in [[Moskou]], [[Rusland]] ip [[6 juni]] [[1799]] en gestorvn in [[Sint-Petersburg]] ip [[10 februoari]] [[1837]]. Ie wos ne [[Rusland|Russische]] schryver die algmêen bestempeld wordt as êen van de grotste Russische dichters, de voader van de Russische letterkunde en êen van de belangrykste Russen die ôoit bestoan ein. Poesjkins letterkundige styl wos een miengelienge van veraaltechniek, dramatizerienge, romantiek en satire die de Russische (en sommigte niet-Russische) schryvers achter em fameus en lange beïnvloed eit.
+'''Alexander Sergejevitsj Poesjkin''' (in 't Russisch alfabet: Алекса́ндр Серге́евич Пу́шкин, uut te spreken lik "Alieksandr Siergejievietsj Poesjkien" {{Audio|ru-Pushkin.ogg|beluuster}}), geboorn in [[Moskou]], [[Rusland]] ip [[6 juni]] [[1799]] en gestorvn in [[Sint-Petersburg]] ip [[10 februoari]] [[1837]]. Ie wos ne [[Rusland|Russische]] schryver die algmêen bestempeld wordt as êen van de grotste Russische dichters, de voader van de Russische letterkunde en êen van de belangrykste Russen die ôoit bestoan ein. Poesjkins letterkundige styl wos een miengelienge van veraaltechniek, dramatiserienge, romantiek en satire die de Russische (en sommigte niet-Russische) schryvers achter em fameus en lange beïnvloed eit.
 
 == Leevn ==
-Poesjkin z’n name, vertoald in ‘t West-Vlams, wil zeggn: “Aleksander, Sèerzje z’n zeune, Van Kanong”. Poesjkin z’n voader stamde af van ‘n vôorname oadelikke famielê, mo de grotvoader van z’n moeder was Abram Petrovitsj Gannibal, ‘n vrygekochte Ethiopische (sommigte zeggen “Kammeroeneesche”) sloaf die ‘t met d'ulpe van z’n pleegvoader [[Peter de Grote]] tot anvoerder van ’t Russisch leger, engenieur en edelman schupte. Van Gannibal stamt tusschen aksjes ook de Britse famielje Mountbatten (en dus de Britse keuniginne) of.
+Poesjkin z’n name, vertoald in ‘t West-Vlams, wil zeggn: “Aleksander, Sèerzje z’n zeune, Van Kanong”. Poesjkin z’n voader stamde af van ‘n vôorname oadelikke familie, mo de grotvoader van z’n moeder was Abram Petrovitsj Gannibal, ‘n vrygekochte Ethiopische (sommigte zeggen “Kameroeneesche”) sloaf die ‘t met d'ulpe van z’n pleegvoader [[Peter de Grote]] tot anvoerder van ’t Russisch leger, ingenieur en edelman schupte. Van Gannibal stamt tusschen aksjes ook de Britse familie Mountbatten (en dus de Britse keuniginne) of.
 
-Poesjkin schreef z’n èerste belangryk gedicht toen dat ‘n vuftien joar oed was. In 1820 verschêen z’n êerste lange gedicht '''Roeslan en Ljoedmiela''', en ‘t was subiet ‘n groot schandaal. Poesjkin rakte nie allêne verwikkeld in letterkundige vernieuwienge mor ook in sosjale. Je steunde de èerste revolusjonair’n die Rusland wildigd’n modernizeern en liberalizeern. Je wierd èerst verban'n no [[Kisjinev]] (nu de oofdstad van [[Moldavië]]) en dornoa nor [[Odessa]]. Oemda je dor ook de revolusjonair bleeft uutang’n, en misschiens ook oemda de jounge vrouwe van de goeverneur verliefd ip hem wier, werd je dornoa verbann no ’t oede landgoed van z’n moeder in Noord-Rusland.
+Poesjkin schreef z’n èerste belangryk gedicht toen dat ‘n viftien joar oud was. In 1820 verschêen z’n êerste lank gedicht '''Roeslan en Ljoedmila''', en ‘t was subiet ‘n groot schandaal. Poesjkin rakte nie allêne verwikkeld in letterkundige vernieuwienge mor ook in sociale. Je steunde de èerste revolutionairn die Rusland wildign moderniseern en liberaliseern. Je wierd èerst verbann no [[Kisjinev]] (nu de oofdstad van [[Moldavië]]) en dornoa nor [[Odessa]]. Omdat 'n dor ook de revolutionair bleeft uutangn, en misschiens ook omda de jounge vrouwe van de gouverneur verliefd ip hem wier, wierd 'n d'rnoa verbann no ’t oud landgoed van z’n moeder in Noord-Rusland.
 
 [[Ofbeeldienge:Pushkin Goncharova Arbat 2005.jpg|thumb|right|Standbeeld van Poesjkin en z'n vrouwe an de Arbat]]
 
-Een van de redens woaroem de tsaar em nie rappe amnestie woe geevn was dat vele van de “dekabriesten”, zo genoemd oemda ze in December 1825 in Sint-Peterburg de macht probeerstn te grypn, bekend stoundn as fans van Poesjkin. By veel van de samenzwèerders wiern tuus gedichtn van Poesjkin gevoundn, mee updrachtn geschreevn van Poesjkin zefs. Poesjkin schreef z’n mèesterwerkn, 't tonèelstik '''Boris Godoenov''' en de roman '''Jevgeni Onegin''' ip 't landgoed va z’n moeder, mo ze zyn mo vuuf joar loater gepubbliseerd. Achter ’n petiesje van andere artiestn, mocht Poesjkin in 1826 eindelijk in St. Petersburg kommn weunn. Je trouwdigde met z’n èwige liefde Natalja Nikolajevna Gontsjarova, wierd makkers meed ’n ander groot schryver, [[Nikolaj Gogol]], en sturtte zich in ’t dekadente leevn an ‘t keizerlik of.
+Een van de redens woarom dat de tsaar em nie rap amnestie wilde geevn was dat vele van de “dekabriesten”, zo genoemd omda ze in december 1825 in Sint-Peterburg de macht probeerdn te grypn, bekend stoundn as fans van Poesjkin. By veel van de samenzwèerders wierdn thuus gedichtn van Poesjkin gevoundn, me updrachtn geschreevn van Poesjkin zefs. Poesjkin schreef z’n mèesterwerkn, 't tonèelstik '''Boris Godoenov''' en de roman '''Jevgeni Onegin''' ip 't landgoed va z’n moeder, mo ze zyn mo vuuf joar loater gepubliceerd. Achter ’n petiesje van andere artiestn, mocht Poesjkin in 1826 eindelik in St. Petersburg kommn weunn. Je trouwdige met z’n èeuwige liefde Natalja Nikolajevna Gontsjarova, wierd makkers met ’n ander groot schryver, [[Nikolaj Gogol]], en sturtte em in ’t decadente leevn an ‘t keizerlik of.
 
-A Poesjkin overtyd veel affaires gead mee getrouwde wuuvn, nu was ’t zyne toer voe zjaloers te wurrn ip z’n vrouwe. In 1837 rakte je verwikkeld in een amoereus schandaal met de Fransman Georges d’Anthès. Hoewel de zjuuste toedracht nog assan nie zekers is, wordt nu toch mistal gedacht da d’Anthès een omo was die enkel voekusjuus deed of dat je de liefebber van Poesjkins vrouwe was.
+A Poesjkin overtyd veel affaires ad me getrouwde wuuvn, nu was ’t zyne toer voe zjaloers te wordn ip z’n vrouwe. In 1837 rakte je verwikkeld in een amoureus schandaal met de Fransman Georges d’Anthès. Hoewel de juste toedracht nog assan nie zekers is, wordt nu toch meestal gepeisd da d’Anthès een omo was die allêne voe kusjuus deed of dat je de liefebber van Poesjkins vrouwe was.
 
-In 't duwel dat dorip volgde, raktn beide mann'n geblesseerd. Alexander Poesjkin stierf twèe dagen loatr. Z’n latste woordn woarn voe z’n vrouwe: “Zorg da ze je vergeetn. Go bachtn ip 't land weunn. Bluuf nog twèe joar rouwn en ertrouwt tons; met een betere vint.” 't Nieuws van Poesjkin zyn dood sloeg èel Rusland mee verslageneid. De keizerlikke poliesje was zo benauwd voe relln en ipstand dan ze, voe 'n toeloop te vermyn, Poesjkins famielje 't bevel gaavn voe de begravienge intiem in 'n klène kerke te doen. Z'n lichaam wierd, verre van elke stad, ip 't langoed van z'n moeder begraavn. Bykans elke stad in Rusland eet 'n monument voe Poesjkin, wor dichters up en af Poesjkins of under eige verzn kommn deklameern, en zangers under versie van 'n Poesjkin gedicht ziengn. Er zyn Poesjkin muzejums in ounder mèer Moskou (z'n geboorteüus an de Arbat), in St. Petersburg, in Odessa, Boldino en Nizjni-Novgorod.
+In 't duel dat dorip volgde, raktn ze alletwêe geblesseerd. Alexander Poesjkin stierf twèe dagen loater. Z’n latste woordn woarn voe z’n vrouwe: “Zorg da ze je vergeetn. Go bachtn ip 't land weunn. Bluuf nog twèe joar rouwn en ertrouwt tons; met een betere vint.” 't Nieuws van Poesjkin zyn dood sloeg èel Rusland me verslageneid. De keizerlikke poliesje was zo benauwd voe relln en ipstand dan ze, voe 'n toeloop te vermyen, Poesjkins familie 't bevel gaavn voe de begravienge intiem in 'n klène kerke te doen. Z'n lichaam wierd, verre van elke stad, ip 't langoed van z'n moeder begraavn. Bykans elke stad in Rusland eet 'n monument voe Poesjkin, wor dichters up en af Poesjkins of under eign verzn kommn declameern, en zangers under versie van 'n Poesjkin gedicht ziengn. Er zyn Poesjkin museums in ounder mèer Moskou (z'n geboorteuus an de Arbat), in St. Petersburg, in Odessa, Boldino en Nizjni-Novgorod.
 
 == Z'n Werkn ==
-* Vriedom (1817) (gedicht)
+* Vrydom (1817) (gedicht)
 * Voe Tsjajadajev (1818) (gedicht)
 * Roeslan en Ljoedmila (1820) (gedicht)
 * De Gevangene van de Kaukasus (1822) (gedicht)
@@ -30,16 +30,16 @@ In 't duwel dat dorip volgde, raktn beide mann'n geblesseerd. Alexander Poesjkin
 * Postume Veraaln van Ivan Petrovitsj Belkin (1831) (proza)
 * De vertellienge van Tsaar Saltan (1831) (gedicht)
 * Jevgeni Onegin (1825-1832) (roman in verzn)
-* De Broenz'n Ruter (1833) (gedicht)
+* De Broenzn Ruter (1833) (gedicht)
 * Dame van Pykes (1833)(roman)
 * De vertellienge van de dooie Prinsesse en de zeevn Ridders (1833) (roman in verzn)
 * De vertellienge van 'n Ane van Goed (1834)
 * De vertellienge van de Vischer en de Vis (1835)
 * De Geschiedenisse va Poegatsjovs Ipstand (1834) (proza)
-* 't Kapietingsdochtertsje (1836) (iestoriesche roman)
+* 't Kapitingsdochtertsje (1836) (istorische roman)
 
 Achter z'n dood:
-* Doebrovski (1832-1833, gepubliseerd 1841) (roman)
+* Doebrovski (1832-1833, gepubliceerd 1841) (roman)
 
 Het "Geèeme Dagboek" dat 'n Amerikaansche firma uut Minneapolis uutgaf round 1988, is 'n vervalsienge, en nie van Poesjkin geschreevn.
 
