*Empty MediaWiki Message*

--- a/Alexander_Poesjkin.mw
+++ b/Alexander_Poesjkin.mw
@@ -41,19 +41,19 @@ In 't duel dat dorip volgde, raktn ze alletwêe geblesseerd. Alexander Poesjkin 
 Achter z'n dood:
 * Doebrovski (1832-1833, gepubliceerd 1841) (roman)
 
-Het "Geèeme Dagboek" dat 'n Amerikaansche firma uut Minneapolis uutgaf round 1988, is 'n vervalsienge, en nie van Poesjkin geschreevn.
+'t "Geheim Dagboek" dat 'n Amerikaansche firma uut Minneapolis uutgaf round 1988, is 'n vervalsienge, en nie van Poesjkin geschreevn.
 
 == De invloed van z'n werk ==
 
-Alexander Poesjkin had vieja z'n impakt ip Gogol en [[Fjodor Dostojevski]], mor ook ip den Amerikoan [[Henry James]], een grote indirekten invloed ip [[Stijn Streuvels]]. 
+Alexander Poesjkin had via z'n impakt ip Gogol en [[Fjodor Dostojevski]], mor ook ip den Amerikoan [[Henry James]], een grote indirectn invloed ip [[Stijn Streuvels]]. 
 
-Mo Poesjkins invloed is ook styf sterk gewist buutn de letterkunde: z'n vertellienge over '''Mozart and Salieri''' was de inspirasje voe Peter Shaffers film Amadeus.
+Mo Poesjkins invloed is ook styf sterk gewist buutn de letterkunde: z'n vertellienge over '''Mozart and Salieri''' was de inspiraasje voe Peter Shaffers film Amadeus.
 
-Zovele werkn van Poesjkin zyn ip muziek gezet, da 'n lyste van werkn die 't nie woarn, kurter zoe zyn. '''Roeslan en Ljoedmila''' van Michail Glinka, '''Jevgeni Onegin''' en '''Dame van Pykes''' van [[Pjotr Tsjaikovski]], '''Boris Godoenov''' van Modest Moessorgski,  ''' 't Kapietingsdochtertsje''' (en 'n poar andere) van César Cui, '''Doebrovski''' van Eduard Nápravník, en tons vergeetn we nog een èele boel ballettn en kantates, en nateurlik liedjes die zefs nu nog ip de tekst van Poesjkin geschreevn worrn (ounder andere 't beruchte "''''k Zag je gerne/ Ya vas lyubil'''").
+Zovele werkn van Poesjkin zyn ip muziek gezet, da 'n lyste van werkn die 't nie woarn, korter zou zyn. '''Roeslan en Ljoedmila''' van Michail Glinka, '''Jevgeni Onegin''' en '''Dame van Pykes''' van [[Pjotr Tsjaikovski]], '''Boris Godoenov''' van Modest Moessorgski,  ''' 't Kapitingsdochtertsje''' (en 'n poar andere) van César Cui, '''Doebrovski''' van Eduard Nápravník, en tons vergeetn we nog een hèle boel ballettn en cantates, en nateurlik liedjes die zefs nu nog ip de tekst van Poesjkin geschreevn wordn (ounder andere 't beruchte "''''k Zag je gerne/ Ya vas lyubil'''").
 
-Na de revoluusje van 1917 wierd Poesjkin deur de [[bolsjevieken]] as "èen van uus" beschouwd, de keizerlikke rezidensje Tsarskoje Selo is zo in "Poesjkin" erdopt. Poesjkin noemde z’n makkers by de Dekabriestn “tovariesjtsj”. Da woord wierd later gebruukt as vertoalienge voe “kammeroad”, de normoale ansprekienge ounder de Sovjet-Unie. Voe Poesjkin wierd ’t woord mèest deur markkramers gebruukt, en betekendigde ‘t “kollega”.
+Achter de revoluusje van 1917 wierd Poesjkin deur de [[bolsjevieken]] as "èen van uus" beschouwd, de keizerlikke residensje Tsarskoje Selo is zo in "Poesjkin" erdopt. Poesjkin noemde z’n makkers by de Dekabriestn “tovariesjtsj”. Da woord wierd later gebruukt as vertoalienge voe “kameroad”, de normoale ansprekienge ounder de Sovjet-Unie. Voe Poesjkin wierd ’t woord mèest deur marktkramers gebruukt, en betekende ‘t “collega”.
 [[Ofbeeldienge:Alexander Puschkin.jpg|thumb|right]]
-== Veurbeeld ==
+== Voorbeeld ==
 
 :::<small>  <big>‘k Zag je gerne, mee ’n liefde die 
 
