*Empty MediaWiki Message*

--- a/Alexander_Poesjkin.mw
+++ b/Alexander_Poesjkin.mw
@@ -1,5 +1,5 @@
-[[Ofbeeldienge:AleksandrPushkin.jpg|thumb|right|Portret (ip oliekanvas) van Poesjkin deur Vasily Tropinin, 1827]]
-'''Alexander Sergejevitsj Poesjkin''' (in 't Russisch alfabet: Алекса́ндр Серге́евич Пу́шкин, uut te spreken lik "Alieksandr Siergejievietsj Poesjkien" {{Audio|ru-Pushkin.ogg|beluuster}}), geboorn in [[Moskou]], [[Rusland]] ip [[6 juni]] [[1799]] en gestorvn in [[Sint-Petersburg]] ip [[10 februoari]] [[1837]]. Ie wos ne [[Rusland|Russische]] schryver die algmêen bestempeld wordt as êen van de grotste Russische dichters, de voader van de Russische letterkunde en êen van de belangrykste Russen die ôoit bestoan ein. Poesjkins letterkundige styl wos een miengelienge van veraaltechniek, dramatiserienge, romantiek en satire die de Russische (en sommigte niet-Russische) schryvers achter em fameus en lange beïnvloed eit.
+[[Ofbeeldienge:AleksandrPushkin.jpg|thumb|right|Portret (olie ip canvas) van Poesjkin deur Vasily Tropinin, 1827]]
+'''Alexander Sergejevitsj Poesjkin''' (in 't Russisch alfabet: Алекса́ндр Серге́евич Пу́шкин, uut te spreken lik "Alieksandr Siergejievietsj Poesjkien" {{Audio|ru-Pushkin.ogg|beluuster}}), ([[Moskou]], [[6 juni]] [[1799]] - [[Sint-Petersburg]], [[10 februoari]] [[1837]]) wos ne [[Rusland|Russische]] schryver die algemêen bestempeld wordt as êen van de grotste Russische dichters, de voader van de Russische letterkunde en êen van de belangrykste Russen die ôoit bestoan ein. Poesjkins letterkundige styl wos een miengelienge van veraaltechniek, dramatiserienge, romantiek en satire die de Russische (en sommigte niet-Russische) schryvers achter em fameus en lange beïnvloed eit.
 
 == Leevn ==
 Poesjkin z’n name, vertoald in ‘t West-Vlams, wil zeggn: “Aleksander, Sèerzje z’n zeune, Van Kanong”. Poesjkin z’n voader stamde af van ‘n vôorname oadelikke familie, mo de grotvoader van z’n moeder was Abram Petrovitsj Gannibal, ‘n vrygekochte Ethiopische (sommigte zeggen “Kameroeneesche”) sloaf die ‘t met d'ulpe van z’n pleegvoader [[Peter de Grote]] tot anvoerder van ’t Russisch leger, ingenieur en edelman schupte. Van Gannibal stamt tusschen aksjes ook de Britse familie Mountbatten (en dus de Britse keuniginne) of.
@@ -23,7 +23,7 @@ In 't duel dat dorip volgde, raktn ze alletwêe geblesseerd. Alexander Poesjkin 
 * Zjipsies (1827) (veraal in verzn)
 * De Moor van Peter de Grote (1827) (over z'n overgrotvoader - nie illegaans afgewerkt)
 * Poltava (1829)
-* Klèene tragedies (ounder andere "De Gast van stèen", "De vrekkige Ridder", "Mozart en Salieri" en "Een Fèest gedeurnde de Pest") (1830)
+* Klène tragedies (ounder andere "De Gast van stèen", "De vrekkige Ridder", "Mozart en Salieri" en "Een Fèest gedeurnde de Pest") (1830)
 * De Dichter en de Massa (1830)
 * De vertellienge van de Priester en z'n Werkman Balda (1830) (gedicht) 
 * Boris Godoenov (1825-1831) (tonèelstik)
@@ -33,10 +33,10 @@ In 't duel dat dorip volgde, raktn ze alletwêe geblesseerd. Alexander Poesjkin 
 * De Broenzn Ruter (1833) (gedicht)
 * Dame van Pykes (1833)(roman)
 * De vertellienge van de dooie Prinsesse en de zeevn Ridders (1833) (roman in verzn)
-* De vertellienge van 'n Ane van Goed (1834)
+* De vertellienge van 'n Ane van Goud (1834)
 * De vertellienge van de Vischer en de Vis (1835)
 * De Geschiedenisse va Poegatsjovs Ipstand (1834) (proza)
-* 't Kapitingsdochtertsje (1836) (istorische roman)
+* 't Kapitingsdochtertje (1836) (istorische roman)
 
 Achter z'n dood:
 * Doebrovski (1832-1833, gepubliceerd 1841) (roman)
@@ -49,7 +49,7 @@ Alexander Poesjkin had via z'n impakt ip Gogol en [[Fjodor Dostojevski]], mor oo
 
 Mo Poesjkins invloed is ook styf sterk gewist buutn de letterkunde: z'n vertellienge over '''Mozart and Salieri''' was de inspiraasje voe Peter Shaffers film Amadeus.
 
-Zovele werkn van Poesjkin zyn ip muziek gezet, da 'n lyste van werkn die 't nie woarn, korter zou zyn. '''Roeslan en Ljoedmila''' van Michail Glinka, '''Jevgeni Onegin''' en '''Dame van Pykes''' van [[Pjotr Tsjaikovski]], '''Boris Godoenov''' van Modest Moessorgski,  ''' 't Kapitingsdochtertsje''' (en 'n poar andere) van César Cui, '''Doebrovski''' van Eduard Nápravník, en tons vergeetn we nog een hèle boel ballettn en cantates, en nateurlik liedjes die zefs nu nog ip de tekst van Poesjkin geschreevn wordn (ounder andere 't beruchte "''''k Zag je gerne/ Ya vas lyubil'''").
+Zovele werkn van Poesjkin zyn ip muziek gezet, da 'n lyste van werkn die 't nie woarn, korter zou zyn. '''Roeslan en Ljoedmila''' van Michail Glinka, '''Jevgeni Onegin''' en '''Dame van Pykes''' van [[Pjotr Tsjaikovski]], '''Boris Godoenov''' van Modest Moessorgski,  ''' 't Kapitingsdochtertje''' (en 'n poar andere) van César Cui, '''Doebrovski''' van Eduard Nápravník, en tons vergeetn we nog een hèle boel ballettn en cantates, en nateurlik liedjes die zefs nu nog ip de tekst van Poesjkin geschreevn wordn (ounder andere 't beruchte "''''k Zag je gerne/ Ya vas lyubil'''").
 
 Achter de revoluusje van 1917 wierd Poesjkin deur de [[bolsjevieken]] as "èen van uus" beschouwd, de keizerlikke residensje Tsarskoje Selo is zo in "Poesjkin" erdopt. Poesjkin noemde z’n makkers by de Dekabriestn “tovariesjtsj”. Da woord wierd later gebruukt as vertoalienge voe “kameroad”, de normoale ansprekienge ounder de Sovjet-Unie. Voe Poesjkin wierd ’t woord mèest deur marktkramers gebruukt, en betekende ‘t “collega”.
 [[Ofbeeldienge:Alexander Puschkin.jpg|thumb|right]]
@@ -79,11 +79,11 @@ Achter de revoluusje van 1917 wierd Poesjkin deur de [[bolsjevieken]] as "èen v
 
 *Lik dat je van een Fransman gedood wierd, is ’t wel bizounder da Poesjkins lapname up schole “de Fransman” was.
 
-*Eèn van de plagers up 't schole was Wilhelm Küchelbecker, die loater ook dichter (en dekabriest) wierd en doe Poesjkin terug gekuld wierd in 'n gedicht over die studentejoar'n. Malgree alles, schreef Küchelbecker 'n gedicht voe de begrafenisse van Poesjkin (een zogenamde elegie), en dat is ook zyn bekendste werk.
+*Eèn van de plagers up 't schole was Wilhelm Küchelbecker, die loater ook dichter (en dekabriest) wierd en doe Poesjkin terug gekuld wierd in 'n gedicht over die studentejoarn. Malgree alles, schreef Küchelbecker 'n gedicht voe de begrafenisse van Poesjkin (een zogenaamde elegie), en dat is ook zyn bekendste werk.
 
 == Externe koppeliengn ==
-* [http://www.youtube.com/watch?v=8eiLwUCuzTY Finale sèene van "Jevgeni Onegin" van Pjotr Tsjaikovski, mee de stem'n van Nuccia Focile en Dimitri Chvorostovski. Mee Fransche oundertietels.]
-* [http://www.youtube.com/watch?v=0YpdzZ7ckx0 Stiksje uut tonèelstik "Dame van Pykes". Herman kriegt nachtelik bezoek van 't wuuf dat 'm zjuust vermoord et. "Oed wuuf, stopt domee!" Russisch.]
+* [http://www.youtube.com/watch?v=8eiLwUCuzTY Finale scène van "Jevgeni Onegin" van Pjotr Tsjaikovski, me de stemmn van Nuccia Focile en Dimitri Chvorostovski. Me Fransche oundertitels.]
+* [http://www.youtube.com/watch?v=0YpdzZ7ckx0 Stiksje uut tonèelstik "Dame van Pykes". Herman krygt nachtelik bezoek van 't wuuf dat 'm zjuust vermoord et. "Oud wuuf, stopt domee!" Russisch.]
 {{commons|Alexander Pushkin|Alexander Poesjkin}}
 
 == Bronn ==
