*Empty MediaWiki Message*

--- a/Karoliengers.mw
+++ b/Karoliengers.mw
@@ -7,14 +7,14 @@ In 687 veroverde de Hofmeier van Austrasië, Pepeyn van Herstal, Neustrië en Bo
 
 In 751 zette z’n zeune Pepeyn den Kortn, met de steun van de paus, de latstn Merovingischn keunink Childerik III an de kant en liet emzelvn tout keunink uutroepn. De Karoliengers volgdn de Merovingische dynastie ip en d’er kwam een ende an d’n titel van Hofmeier.  
 
-==Karel den Grootn==
-Pepeyn den Kortn wierd ipgevolgd deur z’n twêe zeuns Karloman en Karel den Grootn en achter d’n dôod van Karloman was Karel keunink van hêel ’t Frankisch Ryk.
+==Karel den Grôotn==
+Pepeyn den Kortn wierd ipgevolgd deur z’n twêe zeuns Karloman en [[Karel den Grôotn]] en achter d’n dôod van Karloman was Karel keunink van hêel ’t Frankisch Ryk.
 Je voerde mêer of viftig oorloogn en je won ze bykan ollemolle. Zyn teegnstanders woarn o.a. de Saksn, de Friezn, de Langobardn en de Avaarn. Ip ’t toppunt van z’n macht liep zyn Ryk van de Elbe en de Oder tout an de Pyreneeën. In 800 wierd ’n gekroond tout Keizer van ’t [[West-Romeins Ryk]], 't Karolingisch [[Illig Rôoms Ryk]].
 
 ==Karoliengers (751 tout 987)==
-*Pepeyn den Kortn (751 - 768). Achter z'n dôod wordt ‘t ryk verdeeld ounder z’n zeuns Karloman en Karel den Grootn.
+*Pepeyn den Kortn (751 - 768). Achter z'n dôod wordt ‘t ryk verdeeld ounder z’n zeuns Karloman en Karel den Grôotn.
 *Karloman I (768 - 771)
-*[[Karel den Grootn]] (768 - 814), keunink van hêel ‘t ryk achter d’n dôod van z’n broere Karloman in 771, keizer van 't Illig Rôoms Ryk (800-814)
+*Karel den Grôotn (768 - 814), keunink van hêel ‘t ryk achter d’n dôod van z’n broere Karloman in 771, keizer van 't Illig Rôoms Ryk (800-814)
 *Lodewyk I den Vroomn (814 - 840), keizer van 't Illig Rôoms Ryk (813-840)
 
 ==Verdrag van Verdun==
@@ -26,7 +26,7 @@ In [[843]], met 't [[Verdrag van Verdun]], wordt ’t ryk were verdêeld ounder 
 *[[Karel den Kletsn]] (den loatern schôonvoader van [[Boudewyn I van Vloandern|Boudewyn I]], den eestn groaf van Vloandern), krygt [[West-Francië]]
 
 ==Verdelienge in 855==
-In 855 sterft Lotharius I en wordt Middn-Francië verdêeld ounder z’n drie zeuns met ‘t [[Verdrag van Prüm]].
+In 855 sterft Lotharius I en wordt Middn-Francië verdêeld ounder z’n drie zeuns met ‘t Verdrag van Prüm.
 *Lodewyk II (825-875), d'n oudstn krygt Itoalië en wordt keizer van 't Illig Rôoms Ryk (855-875)
 * Lotharius II (835-869) 
 * Karel van Provence (845-863)
@@ -34,7 +34,7 @@ In 855 sterft Lotharius I en wordt Middn-Francië verdêeld ounder z’n drie ze
 ==Ende van Middn-Francië==
 De drie zeuns van Lotharius I èn gin zeuns vor under ip te volgn.
 * Karel van Provence  sterft in 863.
-*Lotharius II sterft in 869. In 870 wordn,  met ’t [[Verdrag van Meerssen]], z’n gebiedn verdêeld ounder z’n nounkels, Lodewyk den Duuts van Oost- en Karel den Kletsn van West-Francië. 
+*Lotharius II sterft in 869. In 870 wordn,  met ’t Verdrag van Meerssen, z’n gebiedn verdêeld ounder z’n nounkels, Lodewyk den Duuts van Oost- en Karel den Kletsn van West-Francië. 
 *Keizer Lodewyk II sterft in 875. Karel den Kletsn lat em in Rome tout Keizer van 't Illig Rôoms Ryk (875-877) kroonn.
 
 Lodewyk den Duuts van Oost-Francië sterft e joar loater en verdeelt z'n keuninkryk ounder z’n drie zeuns: 
