--- a/Frankisch_Ryk.mw
+++ b/Frankisch_Ryk.mw
@@ -4,44 +4,46 @@
 Volgns ’t Frankisch recht most, achter d’n dôod van de keunink, ’t Ryk ossan verdêeld wordn ounder de verschillige zeuns, wa dat ’n enormn invloed aad ip de verdere geschiedenisse van ’t gebied.
 
 ==De Frankn==
-De Frankn woarn oorsprounkelik een verzoamelinge van Germoansche stammn  ten oostn van de Reyn.  Ze begostn ol van ‘t joar 257 ‘t  groundgebied van ‘t [[Romeins Ryk]] binn te volln. 
+De Frankn woarn oorsprounkelik een verzoamelinge van Germoansche stammn  ten oostn van de Reyn. Ze begostn ol van ‘t joar 257 ‘t groundgebied van ‘t [[Romeins Ryk]] binn te volln. 
 
-Theodosius I was keizer van ‘t Romeins Ryk van 379 tout 395. Achter z’n dôod in 395 wierd ’t Ryk were en nu definitief gesplitst in een  [[West-Romeins Ryk]] en een [[Oost-Romeins Ryk]], of [[Byzantyns Ryk]]. ’t West-Romeins Ryk bleef bestoan tout in 476.
+Theodosius I was keizer van ‘t Romeins Ryk van 379 tout 395. Achter z’n dôod in 395 wierd ’t Ryk were en nu definitief gesplitst in een  [[West-Romeins Ryk]] en een Oost-Romeins Ryk of [[Byzantyns Ryk]]. ’t West-Romeins Ryk bleef bestoan tout in 476.
 
-’t Romeins besteur begost z’n macht te verliezn deur ’n ôop invoasies. In 406 wierdn z’overspoeld deur verschillige Germoansche stammn lik Bourgondn,  [[Sueevn]], Vandoaln, Alaann en Sloavische stammn, die under definitief in Gallië installeerdegn.
-Vô  de Vlamsche kust dookn d’r Saksische en Angelsche piroatn ip en de Gootn wierdn uut Silizië en Slovakeye verdreevn deur de Hunn (nomaadn uut Centroal Azië o.l.v. Atilla) en de Visigootn.
+’t Romeins besteur begost z’n macht te verliezn deur ’n ôop invoasies. In 406 wierdn z’overspoeld deur verschillige Germoansche stammn lik Bourgondn, [[Sueevn]], Vandoaln, Alaann en Sloavische stammn, die under definitief in Gallië installeerdegn.
+Vo de Vlamsche kust dookn d’r Saksische en Angelsche piroatn ip en de Gootn wierdn uut Silizië en Slovakeye verdreevn deur de Hunn (nomaadn uut Centroal Azië o.l.v. Atilla) en de Visigootn.
 
 In 476 wierd de latstn West-Romeinschn keizer, Romulus Augustulus ofgezet deur Odoaker, barboar en commandant van de Germoansche ulptroepn. Odoaker wierd uutgeroepn tout keunink van
 [[Itoalië]].
 
-==De Merovingers (481-751)==
+==De Meroviengers (481-751)==
 In 447 kwam [[Merovech]], grôotvoader van [[Clovis I]] , an de macht. Van em komt de noame van de dynastie van de [[Meroviengers]]. Achter d’n dôod van z’n zeune Childerik I in 481 volgde Clovis em ip. Clovis èt ol de Frankn ounder êen leider verenigd. 
 [[Ofbeeldienge:Austrasia.jpg|right|thumb|300px|’t Frankisch Ryk ounder Clovis]]
 [[Ofbeeldienge:Franks expansion.gif|right|400px|thumb|Expansie van 't Frankisch Ryk]]
 [[Ofbeeldienge:Verdrag van Verdun.jpg|thumb|400px|right|Verdelienge van 't Frankisch Ryk achter 't Verdrag van Verdun]]
 ==’t Frankisch Ryk (486-843)==
-In 486,  tien joar achter ’t ofzettn van keizer Romulus Augustulus, versloeg [[Clovis I]]  Syagrius, de latstn Romeinschn gouverneur in ’t Noordn van Gallië, en van ton begost officieel de periode van de ’t Frankisch Ryk. ’t Nieuw dêel van zyn Ryk wierd Neustrië (‘t nieuw land) genoemd en het oude ôorsprounkelik gebied, Austrasië (‘t ôostelik land). Hêel ’t gebied van Gallië krygt nu de noame "Francië".
+In 486, tien joar achter ’t ofzettn van keizer Romulus Augustulus, versloeg [[Clovis I]]  Syagrius, de latstn Romeinschn gouverneur in ’t Noordn van Gallië, en van ton begost officieel de periode van de ’t Frankisch Ryk. ’t Nieuw dêel van zyn Ryk wierd Neustrië (‘t nieuw land) genoemd en 't oud ôorsprounkelik gebied, Austrasië (‘t ôostelik land). Hêel ’t gebied van Gallië krygt nu de noame "Francië".
 
 In 496 liet Clovis em doopn en wierd ’t Christndom de stoatsgodsdienst. Doadeure kwoamn uze streekn in de volgnde eeuwn mêer en mêer ounder invloed van ’t katholiek gelôof.
 
-’t Feit dat ’t Ryk ossan most verdeeld wordn ounder de verschillige zeuns, verzwakte ’t keuninklik gezag. Van de zesde tout de achtste eeuwe is ’t Frankisch Ryk verschillige keern verdeeld en were verenigd.’t Is moa met de nieuwe dynastie, de [[Karoliengers]] , dat de eeneid were ersteld is. Ounder [[Karel den Grootn]] (768-814) en [[Lodewyk den Vroomn]] (814-840) kwam ’t Frankisch Ryk were an zyn toppunt.
+’t Feit dat ’t Ryk ossan most verdeeld wordn ounder de verschillige zeuns, verzwakte ’t keuninklik gezag. Van de zesde tout de achtste eeuwe is ’t Frankisch Ryk verschillige keern verdeeld en were verenigd.’t Is moa met de nieuwe dynastie, de [[Karoliengers]], dat de eeneid were ersteld is. Ounder [[Karel den Grôotn]] (768-814) en Lodewyk den Vroomn (814-840) kwam ’t Frankisch Ryk were an zyn toppunt.
 
 De Merovingsche keuningn verloorn nie ollene land moar ook macht deur enigte hele jounge en zwakke keuningn en uuteindelik kreegn de [[Hofmeier]]s in de 7e eeuwe de echte macht over ’t Frankisch Ryk.
 
 ==De Karoliengers (751-987)==
 De noame van de dynastie van de [[Karoliengers]] komt van Karel Martel, de voader van Pepeyn den Kortn. Karel Martel was de ounwettige zeune van Pepeyn II van Herstal, Hofmeier en de feitelikke leider van Austrasië. In 751 zette Pepeyn den Kortn, met de steun van de paus, de latstn Merovingischn keunink Childerik III an de kant en liet emzelvn tout keunink uutroepn.
 
-O Pepeyn den Kortn stierf in 768 gink z’n keuninkryk, da ’t sterkste van West-Europa was, noa zyn twêe zeuns [[Karel den Grootn]] en Karloman, moa Karloman stierf ol in 771 en doadeure kwam heel ’t Ryk in andn van Karel den Grootn.
+O Pepeyn den Kortn stierf in 768 gink z’n keuninkryk, da ’t sterkste van West-Europa was, noa zyn twêe zeuns Karel en Karloman, moa Karloman stierf ol in 771 en doadeure kwam heel ’t Ryk in andn van Karel den Grôotn.
 
-Zyn besteur was g’inspireerd  ip de klassieke oudeid en ip [[Kestdag]] 800 liet ‘n em deur paus Leo III in [[Rome]] tout keizer kroonn.  Z’n enigstn overgebleevn zeune, [[Lodewyk I den Vroomn]] volgdeg em ip en wierd in 816 in [[Reims]] tout keizer gekroond. 
+Zyn besteur was g’inspireerd  ip de klassieke oudeid en ip [[Kestdag]] 800 liet ‘n em deur paus Leo III in [[Rome]] tout keizer kroonn.  Z’n enigstn overgebleevn zeune, Lodewyk I den Vroomn volgdeg em ip en wierd in 816 in [[Reims]] tout keizer gekrôond. 
 In 843, by ‘t [[Verdrag van Verdun]] wierd ’t Ryk were verdeeld ounder drie zeuns: Karel II of [[Karel den Kletsn]] kreeg [[West-Francië]], Lodewyk II den Duuts [[Oost-Francië]], en ’t Middnryk, ’t belangrykste, gink noa d’n oudstn, Lotharius I.
 
 ==Boudewyn I met den Yzern oarm==
 Uut de Frankischn tyd dateert d’indelinge in ''pagi'' of  ''gouwn''. Ze woarn veel klinder of  uze provincies van nu. Sommigte noamn bestoan nu nog, lik Haspngouw (Pagus Hasbaniensis) en Henegouw (Pagus Hainoensis).
 
-Binst de 9e en 10e eeuwe begostn de [[Vikings]], de Deenn, uze gebiedn te plundern. Ze droungn met under snekkn mè drakarkoppn zô verre meugelik ’t land binn. Vô z’n Noordelikke grenzn te beveilign belastte Karel den Kletsn [[Boudewyn I van Vloandern]],  met ’t besteur over de Vloanderngouw (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]]. Je was den eestn gouwgroaf en uut de Vloanderngouw groeide ‘t [[Groafschap Vloandern]]. 
+In de 9e eeuwe, ounder Karel den Kletsn, besteurde [[Boudewyn I van Vloandern]] de Vloanderngouw (Latyn: Pagus Flandrensis), de streke round [[Toeroet|Tourout]], [[Gistel]], [[Oudenburg]] en [[Brugge]]. Je was den eestn gouwgroaf en uut de Vloanderngouw groeide ‘t [[Groafschap Vloandern]]. 
 
-In dien tyd kwamt er een zêeoarm, ’t [[Zwin]], tout verre in ’t binnland. De Vikings kwoamn langs die weg met under snekkn. De plekke woa dan ze nie mê vôors kostn voarn noemdn ze ''Bryghia'' wat dat in under toale ‘anlegplatse’ wilde zeggn. Vô de Vikings teegn t’oudn bouwde Boudewyn ip die plekke een burcht, woa da nu de Brugsche Burg is. Van doar de noamn  ‘Brugge’ en den ‘Burg’.
+De Deensche [[Vikings]] plunderdn ol e hêeln tyd uze gebiedn. Ze droungn met under snekkn mè drakarkoppn zô verre meugelik ’t land binn.
+In dien tyd kostn ze met under bootn langs de zeeoarm ’t [[Zwin]] en de riviere de Reie tout in Brugge voarn. Ze noemdn die platse ''Bryghia'' wat dat in under toale ‘anlegplatse’ wilde zeggn. Vo de Vikings teegn t'oudn liet Boudewyn een versterktn burcht bouwn ip de plekke woa da nu de Brugschn Burg is.  
+Brugge was ollene mo bereikboar met oog woater, moar e grote overstromienge in de 12e eeuwe makte ’t Zwin loater ôok bevoarboar vo grottere scheepn.
 
 [[Categorie: Frankisch Ryk]]
 
