--- a/Karel_den_Kletsn.mw
+++ b/Karel_den_Kletsn.mw
@@ -18,12 +18,13 @@
 Karel den Kletsn was de joungste zeune van keizer Lodewyk den Vroomn en z’n twidde vrouwe Judith van Beiern.
 O Karel ip de weireld kwam a zyn voader ol drie grôte zeuns mè z’n eeste vrouwe: Lotarius, Lodewyk en Pepeyn.
 ==Ordinatio Imperii==
-Lodewyk den Vroomn aa vor e moeilikke keuze gestoan. An êen kant wildegt ie, volgns de Frankische traditie, z’n ryk verdêeln ounder z’n drie zeuns , mor an d’n andere kant wildegt ie de êeneid van ‘t [[Frankisch Ryk]], dat deur zyn voader  [[Karel den Grootn]] ipgebouwd was,
+Lodewyk den Vroomn aa vor e moeilikke keuze gestoan. An êen kant wildegt ie, volgns de Frankische traditie, z’n ryk verdêeln ounder z’n drie zeuns , mor an d’n andere kant wildegt ie de êeneid van ‘t [[Frankisch Ryk]], dat deur zyn voader [[Karel den Grôotn]] ipgebouwd was,
 in stand oudn. Doarom aad ’n in 817 de ''Ordinatio Imperii'' ipgesteld. Dat ield in da d’n oudstn, Lotharius, de keizerstitel en ’t ippergezag zou krygn en Lodewyk den Duuts en Pepeyn van Aquitanië zoun ounderkeuningn zyn over Beiern en Aquitanië. 
 
-Lodewyk aad ’t  nateurlik nie gemakkelik gemakt ot ’n nog e zeune kreeg, die ôok zyn dêel most èn. Da veroorzakte enorme gevechtn tusschn de broers die nu nog minder gingn krygn. En da woarn nie d’enigste probleemn want van 830 begostn de [[Vikings]] de gebiedn binn te volln. 
+Lodewyk aad ’t nateurlik nie gemakkelik gemakt ot ’n nog e zeune kreeg, die ôok zyn dêel most èn. Da veroorzakte enorme gevechtn tusschn de broers die nu nog minder gingn krygn. En da woarn nie d’enigste probleemn want van 830 begostn de [[Vikings]] de gebiedn binn te volln. 
 
 In 838 stierf Pepeyn, twêe joar vô z’n voader en dus wast er een erfgenoam minder. Z’anveirdn de Ordinatio Imperii van under voader nie mê en zorgdn in 839 in het ‘t ''Akkoord van Worms'' vor e nieuwe erfregelinge.
+
 ==Dôod van Lodewyk den Vroomn==
 Achter da Lodewyk den Vroomn in 840 gestorvn was, eiste Lotharius I were d’invoeringe van de Ordinatio Imperii.  D’andere woarn nie akkoord en Lotharius  begost een oorlog teegn z'n broers.
 In [[842]] sloot Karel mè Lodewyk den Duuts de ''Eed van Straatsburg'' teegn Lotharius, woarin dan ze beloofdn van makkoar te bluuvn steunn.
