*Empty MediaWiki Message*

--- a/West-Romeins_Ryk.mw
+++ b/West-Romeins_Ryk.mw
@@ -1,7 +1,7 @@
 [[Ofbeeldienge:Theodosius I's empire.png|right|thumb|400px|De splitsienge van ‘t Romeins Ryk, achter d’n dôod van Keizer Theodosius I in 395, in een West- en een Oost-Romeins Ryk]]
 't '''West- Romeins Ryk''' (in ‘t Latyn ''Imperium Romanum Pars Occidentalis'') ountstound in 395, ‘t joar van de definitieve splitsienge van ‘t [[Romeins Ryk]] in een West- en een Oost- of Byzantyns Ryk. D’oofdsteedn van ’t West-Europees Ryk woarn êest [[Milaan]] (394-402) en loater Ravenna (402-476). De latstn West-Romeinschn keizer, Romulus Augustus, wierd in 476 ofgezet deur Odoaker, barboar en commandant van de Germoann. 
 
-’t [[Oost-Romeins Ryk]], met d’oofdstad Constantinopel, bleef bestoan tout in 1453.
+’t Oost-Romeins Ryk, met d’oofdstad Constantinopel, bleef bestoan tout in 1453.
 ==Splitsienge==
 ‘t Oorsprounkelik Romeins Ryk was ol in 285, ounder keizer Diocletianus, gesplitst gewist in een oostelik en een westelik stik. De grenze wierd getrokkn tusschn Itoalië en ’t Westn, woa dan ze Latyn klaptn, en ‘t Oostn woa dan ze Grieks klaptn en woa dan ze ’t veel beter steldn.
 
@@ -26,7 +26,7 @@ gouverneur en platselik bevelebber van de Oost-Romeinn.
 In ‘t gebied round Lutetia, (nu [[Parys]]) èt de Romeinschn generoal Syagrius ‘t nog uutg’oudn tout in 486. De Frankn, ounder [[Clovis I]], veroverdn ‘t latste stik van ‘t  Romeins Ryk in West-Europa.
 
 ==De nieuwn Keizer van 't West-Romeins Ryk==
-Teegn de gouste van Constantinopel wierd [[Karel den Grootn]] ip [[Kestdag]] van ‘t joar 800 deur paus Leo III gekrôond tout nieuwn keizer van 't West-Romeins Ryk, een titel die nie mê sedert 476 in West-Europa gebruukt was en dus achter een ounderbrekienge van 324 joar. ’t West-Romeins Ryk wierd theoretisch were vôortgezet ols ’t [[Karoliengers|Karolingisch]] [[Illig Rôoms Ryk]].
+Teegn de gouste van Constantinopel wierd [[Karel den Grôotn]] ip [[Kestdag]] van ‘t joar 800 deur paus Leo III gekrôond tout nieuwn keizer van 't West-Romeins Ryk, een titel die nie mê sedert 476 in West-Europa gebruukt was en dus achter een ounderbrekienge van 324 joar. ’t West-Romeins Ryk wierd theoretisch were vôortgezet ols ’t [[Karoliengers|Karolingisch]] [[Illig Rôoms Ryk]].
 
 [[Categorie: Klassiekn tyd]]
 
