--- a/Frankn.mw
+++ b/Frankn.mw
@@ -28,9 +28,9 @@ Pepeyn  van Herstal, Hofmeier van Austrasië, van 't uus van de [[Pepinidn]], ve
 ’t Uus van de Pepinidn wierd ipgevolgd deur de [[Karoliengers]].
 
 ==De Karoliengers==
-Ot de zeune van Karel Martel, [[Pepeyn den Kortn]], in 751 keunink van de  Frankn wierd en Bourgondië overwonn aad, begostn de noamn en de binngrenzn te vervoagn en wierd er ollene nog moa geklapt van ‘t Frankisch Ryk.
+Ot de zeune van Karel Martel, Pepeyn den Kortn, in 751 keunink van de  Frankn wierd en Bourgondië overwonn aad, begostn de noamn en de binngrenzn te vervoagn en wierd er ollene nog moa geklapt van ‘t Frankisch Ryk.
 
-In ’t joar 800 wierd Pepeyns zeune, [[Karel den Grootn]] ip [[Kestdag]] deur paus Leo III gekrôond tout nieuwn keizer van 't West-Romeins Ryk, een titel die nie mê sedert 476 in West-Europa gebruukt was en dus achter een ounderbrekienge van 324 joar. ’t Ryk wierd theoretisch were vôortgezet ols ’t [[Karoliengers|Karolingisch]] [[Illig Rôoms Ryk]].
+In ’t joar 800 wierd Pepeyns zeune, [[Karel den Grôotn]] ip [[Kestdag]] deur paus Leo III gekrôond tout nieuwn keizer van 't West-Romeins Ryk, een titel die nie mê sedert 476 in West-Europa gebruukt was en dus achter een ounderbrekienge van 324 joar. ’t Ryk wierd theoretisch were vôortgezet ols ’t [[Karoliengers|Karolingisch]] [[Illig Rôoms Ryk]].
 
 [[Categorie: Frankisch Ryk]]
 [[af:Franke]]
