--- a/Middn-Francië.mw
+++ b/Middn-Francië.mw
@@ -19,18 +19,18 @@ D’r zyn nog duusd joar discussies gewist tusschn [[Frankryk]] en [[Duutsland]]
 * Rhône-Alpes
 * Provence 
 * ‘t westelik stik van [[Zwitserland]]
-* Nôord-[[Itoalië]]
+* Nôord-Itoalië
 ==Verdelienge  in 855==
 [[Ofbeeldienge:Teilung Lotharingiens.png|thumb|250px|Verdrag van Prüm]]
 [[Ofbeeldienge:843-870 Europe.jpg|thumb|250px|’t Verdrag van Verdun in 843 en ’t Verdrag van Meerssen in 870]]
-O Lotharius I in 855 stierf, wierd volgns de Salische Wet, ’t Middnryk verdêeld ounder z’n drie zeuns met ‘t [[verdrag van Prüm]].
+O Lotharius I in 855 stierf, wierd volgns de Salische Wet, ’t Middnryk verdêeld ounder z’n drie zeuns met ‘t verdrag van Prüm.
 *Lotharius II kreegt de Lêge Landn en Elzas-Lotharingn, ounder de noame Keuninkryk Lotharingn.
 *Lodewyk II  kreeg [[Itoalië]] met de keizerstitel, keizer van ‘t [[Karoliengers|Karolingisch]] [[Illig Rôoms Ryk]]
 *Karel van Provence kreegt de Provence, Arles en e grôot stik van Bourgondië.
 ==Ende van Middn-Francië==
 De drie zeuns van Lotharius I aan gin zeuns vor under ip te volgn.
 * Karel van Provence  stierf in 863. Zyn gebiedn wierdn verdêeld ounder z’n broers  Lotharius II en Lodewijk II.
-*Lotharius II stierf in 869. In 870 wierdn,  met ’t [[Verdrag van Meerssen]], z’n gebiedn  verdêeld ounder z’n nounkels, Lodewyk den Duuts van Oost- en Karel den Kletsn van West-Francië. Lodewyk d’n Duuts kreegt de gebiedn van de Nederlandn, die ’t ertogdom Neder-Lotharingn vormdn. De Schelde vormde de grenze tusschn Frankryk en ’t Duuts Ryk (loater ’t Duuts [[Illig Rôoms Ryk]] in 962 ounder Otto I)
+*Lotharius II stierf in 869. In 870 wierdn,  met ’t Verdrag van Meerssen, z’n gebiedn  verdêeld ounder z’n nounkels, Lodewyk den Duuts van Oost- en Karel den Kletsn van West-Francië. Lodewyk d’n Duuts kreegt de gebiedn van de Nederlandn, die ’t ertogdom Neder-Lotharingn vormdn. De Schelde vormde de grenze tusschn Frankryk en ’t Duuts Ryk (loater ’t Duuts Illig Rôoms Ryk in 962 ounder Otto I)
 *Keizer Lodewyk II stierf in 875. Zyn gebiedn gingn noa Karloman van Oost-Francië, de zeune van Lodewyk den Duuts. Karel den Kletsn  gink noa Rome vor em tout Keizer van 't Illig Rôoms Ryk (875-877) te loatn kroonn. 
 Da was ’t ende van ‘t Keuninkryk Lotharingn.
 [[categorie:Frankisch Ryk]]
