*Empty MediaWiki Message*

--- a/Illig_Rôoms_Ryk.mw
+++ b/Illig_Rôoms_Ryk.mw
@@ -4,7 +4,7 @@
 [[Ofbeeldienge:Germania1648(3)JPG.JPG|thumb|Detailkoarte van et Illig Rôoms Ryk achter de Vrede van Westfaaln (1648)]]
 ’t '''Illig Rôoms Ryk''' was een soamnvoeginge van stoatn in centroal [[Europa]] binst de [[Middeleeuwn]] en de nieuwn tyd ounder 't gezag van een keizer.
 
-In 800 wierd [[Karel den Grootn]] gekrôond tout keizer van 't [[West-Romeins Ryk]], een titel die nie mê gegeevn was sedert 476. 't Was 't begun van 't [[Karoliengers|Karolingisch]] Illig Rôoms Ryk.
+In 800 wierd [[Karel den Grôotn]] gekrôond tout keizer van 't [[West-Romeins Ryk]], een titel die nie mê gegeevn was sedert 476. 't Was 't begun van 't [[Karoliengers|Karolingisch]] Illig Rôoms Ryk.
 
 ’t Duuts Illig Rôoms Ryk (Heiliges Römisches Reich Deutscher Nation) wierd gesticht in 962 deur Otto I en ‘t bleef bestoan tout in 1806. 't Is moa van ton dat 't Ryk zounder ounderbrekienge deure liep.
 ==Keizers van ’t Illig Rooms Ryk (800-924)==
