--- a/28_januoari.mw
+++ b/28_januoari.mw
@@ -4,7 +4,7 @@
 *[[1959]] - [[Renaat Landuyt]]
 
 ==Overleedn==
-*[[814]] - [[Karel de Grote]]
+*[[814]] - [[Karel den Grôotn]]
 *[[1547]] - [[Hendrik VIII van Iengeland]]
 *[[1688]] - [[Ferdinand Verbiest|Ferdinand Verbiest S.J.]]
 *[[1995]] - [[Leo Van Paemel]]
