update: nu minister (wie checkt of het Kortrijks is?)

--- a/Vincent_Van_Quickenborne.mw
+++ b/Vincent_Van_Quickenborne.mw
@@ -1,7 +1,7 @@
 {{plat|Kortryks}}
 
 '''Vincent van Quickenborne''' (°[[Gent]], [[1 ogustus]] [[1973]]) , oftewel 'Q', es nen Vlamsen minister. 
-<br>Van Quickenborne is nen [[Kortryk|Kortrykzoan]] en ie komt ip voor de [[Open VLD]]. Voor de moment es ie verantwoordelik voor 'Administratieve verêenvoudiginge'. Ie doet da ip een pragmatische maniere: iè een lyste van onzinnige administratieve wettn gemakt en iè ze nu êen voa êen an 't ofskaffn.
+<br>Van Quickenborne is nen [[Kortryk|Kortrykzoan]] en ie komt ip voor de [[Open VLD]]. Voor de moment es ie in Leterme I 'minister voor Ondernemen en Vereenvoudigen'. Ie wilt dat doen da ip een pragmatische maniere, juste lik dat 'n Stoatssecretaris wos: iè een lyste van onzinnige administratieve wettn gemakt en ie wilde ze êen voa êen ofskaffn.
 
 Alhoewel dat ie nog redelik jonk es, eit ie toch al veel woaterkes deurzwommn. Je kwam êest ip veur de VU&ID, doarnoa met [[Spirit]] om te endign in de [[VLD]], nu [[Open VLD]]. In 't begun wos ie surtout gekend voor zyn stunts (peis mor an de joint histoire in et Parlement en et bezoek by [[Louis Tobback]] als lid van de [[Witte Comités]]), moa de latste joaren begunt ie ollik een bitje serieusker over te komn. 
 
@@ -11,12 +11,13 @@ J'eit em by de pers nie al te populair gemakt toen dat ie me Fluppe en Matilde i
 * Senator in [[België]] (1999-2003)
 * Gemêenteroadslid in [[Kortryk]] (2001-2006,2007-)
 * Stoatssecretaris in [[België]] (2003-2007)
+* Minister voor Ondernemen en Vereenvoudigen in Leterme I
 
 ==Varia==
 In [[2007]] eit ie een [[West-Vloandern|West-Vlamsche]] koarte uutgebrocht (als verkieziengsdrukweirk voo de [[Federoale parlementsverkiezingn 2007]]) die dudelik geïnspireerd wos ip de West-Vlamsche wikipedia.
 
 == Externe koppelienge ==
-* [http://www.staatssecretarisq.be/ Zyne website]
+* [http://www.staatssecretarisq.be/ Zyne website ton dat ie nog staatssecretoaris wos]
 * [http://www.kafka.be/ Zyn kafka-website voor administratieve verêenvoudigienge]
 
 [[Categorie: Kortryk|V]]
