--- a/Vincent_Van_Quickenborne.mw
+++ b/Vincent_Van_Quickenborne.mw
@@ -1,6 +1,6 @@
 {{plat|Kortryks}}
 
-'''Vincent van Quickenborne''' (°[[Gent]], [[1 ogustus]] [[1973]]) , oftewel 'Q', es nen Vlamsen minister. 
+'''Vincent van Quickenborne''' (°[[Gent]], [[1 ogustus]] [[1973]]) , oftewel 'Q', es een minister in de federale regering Leterme I. 
 <br>Van Quickenborne is nen [[Kortryk|Kortrykzoan]] en ie komt ip voor de [[Open VLD]]. Voor de moment es ie in Leterme I 'minister voor Ondernemen en Vereenvoudigen'. Ie wilt dat doen da ip een pragmatische maniere, juste lik dat 'n Stoatssecretaris wos: iè een lyste van onzinnige administratieve wettn gemakt en ie wilde ze êen voa êen ofskaffn.
 
 Alhoewel dat ie nog redelik jonk es, eit ie toch al veel woaterkes deurzwommn. Je kwam êest ip veur de VU&ID, doarnoa met [[Spirit]] om te endign in de [[VLD]], nu [[Open VLD]]. In 't begun wos ie surtout gekend voor zyn stunts (peis mor an de joint histoire in et Parlement en et bezoek by [[Louis Tobback]] als lid van de [[Witte Comités]]), moa de latste joaren begunt ie ollik een bitje serieusker over te komn. 
