--- a/Yves_Leterme.mw
+++ b/Yves_Leterme.mw
@@ -6,8 +6,11 @@ Zyn ouders komn uut [[Koomn]], en is opgekwikt in [[Zillebeke]], moar e wunt ann
 
 Aloewel dat'n overtyd e gryst imago adde (zyn bynoame is ''Boekouder''), ist'n in de joungste joarn uutegroeid tout êen van Vloanderns populairste polletiekers. Yves Leterme goat er ton ouk prat op dat 'n e geweunn mens is gebleevn: e goat goa kykn na de [[vélokoerse|koers]] a zyn zeune rydt, e zegt teegn olleman dat 'n e gête et in zyn of, en en is supporter van Standard.
 
-== Twi keirs formateur, twi keirs mislukt ==
-Achter de federoale verkieziengn va juni 2007, wos Didier Reynders informateur. Toen da zyn rolle wos uutespeeld, kwam Leterme formateur: nem oalt by de verkieziengn de mounsterscore van om en by de 800.000 vôorkeursstemmn. Leterme beguste d'ounderandeliengn vour en oranje-blauwe coaliesje (christn-democroatn en liberoaln). Moa dat foeterde van ol gin kantn: Leterme zelve zou tactische foutn emakt en, moa surtout de Woalsche CDh spartelde teegn. Discuusjepunt wos surtout de communautaire kwestjes woaby da de Vloamiengn noch de Woaln toegeviengn wulnde doen. Op 23 oest 2007 zei Leterme an de keunienk da zyn opdracht mislukt wos. E tydje loater krygt Leterme e twidde kanse. Moa in december 2007 is 't dudelik da ''Oranje-blow'' gin regerieng ku vormn. Leterme is toun minister voo ''Institutionele Ervormiengn, Begrôtienge en Mobiliteit'' gekoomn in de interimregerienge van [[Guy Verhofstadt|Verhofstadt]]. Ie es ôok vice-premier.
+== Mislukt als formateur ==
+Achter de federoale verkieziengn va juni 2007, wos Didier Reynders informateur. Toen da zyn rolle wos uutespeeld, kwam Leterme formateur: nem oalt by de verkieziengn de mounsterscore van om en by de 800.000 vôorkeursstemmn. Leterme beguste d'ounderandeliengn vour en oranje-blauwe coaliesje (christn-democroatn en liberoaln). Moa dat foeterde van ol gin kantn: Leterme zelve zou tactische foutn emakt en, moa surtout de Woalsche CDh spartelde teegn. Discuusjepunt wos surtout de communautaire kwestjes woaby da de Vloamiengn noch de Woaln toegeviengn wulnde doen. Op 23 oest 2007 zei Leterme an de keunienk da zyn opdracht mislukt wos. E tydje loater krygt Leterme e twidde kanse. Moa in december 2007 is 't dudelik da ''Oranje-blow'' gin regerieng ku vormn. Leterme is toun minister voo ''Institutionele Ervormiengn, Begrôtienge en Mobiliteit'' gekoomn in de interimregerienge van [[Guy Verhofstadt|Verhofstadt]]. E wos ouk vice-premier.
+
+== Premier ==
+Achter d'interimregerieng Verhofstadt III wos de PS betrokkn by d'ounderandeliengn. Uutendelik kwam er toch e regerieng mi Leterme an 't oofd: Leterme I. Op 21 moarte 2008 zweirde Leterme 'n êed by 'n keunienk.
 
 == Ambras me de Woaln ==
 Leterme legt nie goed by de Franstoalige pers. 
